tests/golden/type_errors/nullable_narrowing_field_unsupported.cd
struct Box { value: number? }
fun takesNumber(value: number): number { return value; }
let box: Box = Box { value: 1 };
if (box.value != nil) {
  print takesNumber(box.value);
}
